# performance-micro-benchmarks

./: .gitignore  CMakeLists.txt  LICENSE.md  NOTES.md  README.md  TODO.md
benchmark/: CMakeLists.txt
benchmark/dependency-injection-header-only/: CMakeLists.txt
benchmark/dependency-injection-header-only/performance-micro-benchmarks/header-only/concepts/: benchmark_user.cpp
benchmark/dependency-injection-header-only/performance-micro-benchmarks/header-only/crtp/: benchmark_user.cpp
benchmark/dependency-injection-header-only/performance-micro-benchmarks/header-only/oo/: benchmark_user.cpp
benchmark/dependency-injection-header-only/performance-micro-benchmarks/header-only/template-duck-typing/: benchmark_user.cpp
benchmark/dependency-injection-shared-library/: CMakeLists.txt
benchmark/dependency-injection-shared-library/performance-micro-benchmarks/shared-library/oo/: benchmark_user.cpp
benchmark/dependency-injection-static-library/: CMakeLists.txt
benchmark/dependency-injection-static-library/performance-micro-benchmarks/static-library/oo/: benchmark_user.cpp
benchmark/memory-access/: CMakeLists.txt
benchmark/memory-access/performance-micro-benchmarks/memory-access/: benchmark_memory_access.cpp
benchmark/resources/include/: utility.hpp
benchmark/resources/include/performance-micro-benchmarks/: utility.hpp
benchmark/syscall/: CMakeLists.txt
benchmark/syscall/performance-micro-benchmarks/syscall/: benchmark_syscall.cpp
cmake/: dependencies.cmake
src/: CMakeLists.txt
src/dependency-injection-header-only/: CMakeLists.txt
src/dependency-injection-header-only/performance-micro-benchmarks/header-only/concepts/: fn_concept.hpp  user.hpp
src/dependency-injection-header-only/performance-micro-benchmarks/header-only/crtp/: fn_interface.hpp  user.hpp
src/dependency-injection-header-only/performance-micro-benchmarks/header-only/oo/: fn_interface.hpp  user.hpp
src/dependency-injection-header-only/performance-micro-benchmarks/header-only/template-duck-typing/: user.hpp
src/dependency-injection-shared-library/: CMakeLists.txt
src/dependency-injection-shared-library/include/performance-micro-benchmarks/shared-library/oo/: fn_interface.hpp  user.hpp
src/dependency-injection-shared-library/src/performance-micro-benchmarks/shared-library/oo/: user.cpp
src/dependency-injection-static-library/: CMakeLists.txt
src/dependency-injection-static-library/include/performance-micro-benchmarks/static-library/oo/: fn_interface.hpp  user.hpp
src/dependency-injection-static-library/src/performance-micro-benchmarks/static-library/oo/: user.cpp
support-library/: CMakeLists.txt
support-library/include/: CMakeLists.txt
support-library/include/performance-micro-benchmarks/support-library/: utility.hpp
support-library/test/: CMakeLists.txt
support-library/test/performance-micro-benchmarks/support-library/: test_utility.cpp
test/unit/: CMakeLists.txt
test/unit/dependency-injection-header-only/: CMakeLists.txt
test/unit/dependency-injection-header-only/performance-micro-benchmarks/header-only/concepts/: fn_concept_mock.hpp  test_user.cpp
test/unit/dependency-injection-header-only/performance-micro-benchmarks/header-only/crtp/: fn_interface_mock.hpp  test_user.cpp
test/unit/dependency-injection-header-only/performance-micro-benchmarks/header-only/oo/: fn_interface_mock.hpp  test_user.cpp
test/unit/dependency-injection-header-only/performance-micro-benchmarks/header-only/template-duck-typing/: fn_interface_mock.hpp  test_user.cpp
